--- a/index.html
+++ b/index.html
@@ -12,48 +12,58 @@
         <a href="#projects">Projects</a>
         <a href="#contact">Contact</a>
     </nav>
-
-  <header>  
-    <h1>SANCHIT SINGH </h1>
-    <p>BCA Student at PSIT | Aspiring Web Developer</p>
-  </header>
-  <section id="about">
-    <h2>About Me</h2>
-        <p>A focused BCA student at PSIT, Kanpur, learning full-stack development, data structures, and databases through regular coding practice.</p>
-        <p>Currently building portfolio and academic projects to strengthen problem-solving skills and showcase practical work.</p>
-        <p>Interested in internships and real-world opportunities to apply concepts learned in class and grow as a developer.</p>
-  </section>
-  <section id="skills">
-    <h2>Skills</h2>
-    <ul>
-      <li>HTML, CSS, basic JavaScript</li>
-      <li>C++, Python</li>
-      <li>DBMS, SQL (beginner)</li>
-    </ul>
-  </section>
-  <section id="projects">
-    <h2>Projects</h2>
-    <ul>
-      <li>
-        <strong>Kanpur Coding Club Landing Page</strong>  
-                A simple responsive landing page built using HTML and CSS.
-        <br>
-        <a href="Projects/Kanpur Coding Club/index.html" target="_blank">View Project</a>
-      </li>
-      <li>
-        <strong>To-Do List</strong>
-                Built using HTML, CSS, and JavaScript.
-                Allows users to add and delete tasks.
-        <br>
-        <a href="Projects/TO DO List/index.html" target="_blank">View Project</a>
-      </li>
-    </ul>
-  </section>
-  <section id="contact">
-    <h2>Contact</h2>
-    <p>Email: sanchitsingh382@gmail.com</p>
-    <p>GitHub: https://github.com/SanchitSingh382</p>
-    <p>LinkedIn: https://www.linkedin.com/in/sanchit-singh-274279264</p>
-  </section>
+    <header>  
+      <h1>Sanchit Singh</h1>
+      <p>BCA Student at PSIT, Kanpur | Web Development Learner</p>
+    </header>
+    <section id="about">
+      <h2>About Me</h2>
+          <p>A focused BCA student at PSIT, Kanpur, learning full-stack development, data structures, and databases through regular coding practice.</p>
+          <p>Currently building portfolio and academic projects to strengthen problem-solving skills and showcase practical work.</p>
+          <p>Interested in internships and real-world opportunities to apply concepts learned in class and grow as a developer.</p>
+    </section>
+    <section id="skills">
+      <h2>Skills</h2>
+      <ul>
+        <li>HTML5, CSS3</li>
+        <li>JavaScript (basics, DOM manipulation)</li>
+        <li>C++, Python (academic)</li>
+        <li>DBMS, SQL (fundamentals)</li>
+        <li>Git & GitHub (basic)</li>
+      </ul>
+    </section>
+    <section id="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>
+          <strong>Kanpur Coding Club – Landing Page</strong><br>
+          A responsive landing page created using HTML and CSS to practice
+          layout design, sections, and basic responsiveness.
+          <br>
+          <a href="projects/kanpur-coding-club/index.html" target="_blank">
+            View Project
+          </a>
+        </li>
+        <li>
+          <strong>To-Do List Web App</strong><br>
+          A simple task management app built using HTML, CSS, and JavaScript
+          with basic DOM manipulation.
+          <br>
+          <a href="projects/todo-list/index.html" target="_blank">
+            View Project
+          </a>
+        </li>
+      </ul>
+    </section>
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: yourrealemail@gmail.com</p>
+      <p>
+        GitHub:
+        <a href="https://github.com/SanchitSingh382" target="_blank">
+          github.com/SanchitSingh382
+        </a>
+      </p>
+    </section>
 </body>
 </html>
