--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           A responsive landing page created using HTML and CSS to practice
           layout design, sections, and basic responsiveness.
           <br>
-          <a href="projects/Kanpur Coding Club/index.html" target="_blank">
+          <a href="Projects/Kanpur Coding Club/index.html" target="_blank">
             View Project
           </a>
         </li>
@@ -49,7 +49,7 @@
           A simple task management app built using HTML, CSS, and JavaScript
           with basic DOM manipulation.
           <br>
-          <a href="projects/TO DO List/index.html" target="_blank">
+          <a href="Projects/TO DO List/index.html" target="_blank">
             View Project
           </a>
         </li>
@@ -67,4 +67,5 @@
     </section>
 </body>
 </html>
+
 
